feat: fetch hourly weather, celcium/fahrenheit

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -12,6 +12,10 @@
   border: none !important;
 }
 
+body {
+  pointer-events: auto !important;
+}
+
 /* .inner-tooltip {
   display: flex;
   flex-direction: column;
